Fix Github links
And some indentations too.

--- a/web-root/index.html
+++ b/web-root/index.html
@@ -44,16 +44,16 @@
     <div class="container">
       <div id="hl7-nav">
         <a id="hl7-logo" no-external="true" href="https://hl7.fi/"><img height="50" alt="Visit the HL7 Finland website"
-            src="./assets/hl7-finland-logo.svg"></a>
+          src="./assets/hl7-finland-logo.svg"></a>
       </div>
       <div id="family-nav">
         <a id="family-logo" no-external="true" href="http://hl7.org/fhir"><img height="50" alt="Visit the FHIR website"
-            src="./assets/fhir-logo-www.png"></a>
+          src="./assets/fhir-logo-www.png"></a>
       </div>
       <div id="ig-status">
         <p><span id="ig-title" style="font-size:12pt;font-weight:bold">FHIR Implementation
-            Guides</span><br /><span style="display:inline-block;">published by HL7 Finland <img alt="Finland flag"
-              src="./assets/fin.svg" height="16" title="Finland"></span>
+          Guides</span><br /><span style="display:inline-block;">published by HL7 Finland <img alt="Finland flag"
+          src="./assets/fin.svg" height="16" title="Finland"></span>
         </p>
       </div>
     </div>
@@ -155,12 +155,12 @@
     <div id="segment-footer" igtool="footer" class="segment">
       <div class="container">
         <div class="inner-wrapper">
-          <p>&copy; 2022+ <a style="color:var(--footer-hyperlink-text-color)" href="https://www.hl7.fi/">HL7 Finland
-              ry</a>. <a rel="license"
-              href="https://raw.githubusercontent.com/fhir-fi/finnish-smart/master/LICENSE"><img
-                style="border-style: none;" alt="CC0-1.0" src="./images/cc0.png"></a> See the <a
-              style="color: var(--footer-hyperlink-text-color)"
-              href="https://github.com/fhir-fi/finnish-smart">source</a>.
+          <p>&copy; 2022+ <a style="color:var(--footer-hyperlink-text-color)"
+            href="https://www.hl7.fi/">HL7 Finland ry</a>. <a rel="license"
+            href="https://github.com/fhir-fi/hl7-fi-fhir/blob/main/LICENSE"><img
+            style="border-style: none;" alt="CC0-1.0" src="./images/cc0.png"></a> See the <a
+            style="color: var(--footer-hyperlink-text-color)"
+            href="https://github.com/fhir-fi/hl7-fi-fhir">source</a>.
           </p>
         </div>
       </div>
