Add scheduling IG to index page

--- a/web-root/index.html
+++ b/web-root/index.html
@@ -101,6 +101,11 @@
                 <p>See the <a href="finnish-smart/">Finnish Implementation Guide for SMART App
                   Launch</a>!</p>
               </li>
+              <li>
+                <h4>Finnish Scheduling</h4>
+                <p>The Finnish HL7 FHIR implementation guide for scheduling.</p>
+                <p>See the <a href="finnish-scheduling/">Finnish Scheduling</a> IG!</p>
+              </li>
             </ul>
             <h3>Older implementation guides in Simplifier</h3>
             <div class="intro">
